added footer with credit to API source

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
 
     </div>
-    
+    <footer style="text-align: center;">
+      <p>This Website was made by William Denega, using the following API: <a href="http://ergast.com/mrd/"> http://ergast.com/mrd/ </a></p>
+    </footer>
 
 
   </body>
